News for django-debug-toolbar
=============================

develop branch
--------------

* Added support for LogBook. Thanks to Vincent Driessen.

* Added clean_params method to DatabaseStatTracker to scrub non-unicode
  data for displaying on the sql panel. Thanks to Matthew J Morrison

0.8.4 (2010 Nov 8)
------------------

* Added print style to hide the toolbar (issue 90)

* Fixed "Badly formatted SQL query plan" (issue 86)

* Fixed "SQL not selectable due to line chart" (issue 85)

* Fixed "Redirect page does not set cookie" (issue 6)

* Fixed template block inheritance bug (issues 77 and 97).

* Fixed flash of unstyled toolbar.

* Updated to work with old TEMPLATE_LOADERS settings from < 1.2.

* Updated to stop template loader iteration when template is found.


(Note: NEWS was started after the 0.8.3 release and is not complete)
